fix collection alignment, fix video size for tablet and mobile

--- a/assets/video-section.css
+++ b/assets/video-section.css
@@ -36,6 +36,7 @@
 .video-section__media iframe,
 .video-section__media video {
   position: absolute;
+  height: 530px;
   width: 100%;
 }
 
@@ -56,7 +57,6 @@
   .video-section__poster,
   .video-section__media iframe,
   .video-section__media video {
-    height: auto; 
-    max-height: 100vw;
+    height: 265px;
   }
 }
